[tool.poetry]
name = "datapao-hometest"
version = "0.1.0"
description = ""
authors = ["Andras Novoszath <nocibambi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
html5lib = "^1.1"
pandera = {extras = ["mypy"], version = "^0.14.5"}
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipykernel = "^6.22.0"
mypy = "^1.2.0"
pandas-stubs = "^2.0.0"
types-requests = "^2.28.11"
types-beautifulsoup4 = "^4.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
